--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <a class="nav-link" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link" href="#contact">Contact Me</a>
             </li>
           </ul>
           <!-- / -->
