--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- / -->
 
   <!-- Website Icon -->
-  <link rel="icon" href="favicon.ico" />
+  <link rel="icon" href="logoraj.ico" />
   <!-- / -->
 </head>
 
