Updated index.html with new description and job.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <h5 class="color-extra-dark-gray font-w-700 font-alt text-uppercase font-alt m-0px m-10px-b">About me</h5>
             <span class="w-50px h-1px theme-bg display-table"></span>
             <p class="w-90 sm-w-100 font-alt font-w-600 color-extra-dark-gray m-25px-t">Innovator in training.</p>
-            <p class="w-90 sm-w-100 m-25px-b"> I'm a first year Nanotechnology Engineering student at the University of Waterloo, and I'm excited to be at the forefront of the technological revolution that is Nanotechnology. <br><br>I enjoy long walks to the fridge, watching animé with friends, and learning new things. When I'm not eating dried mangoes and binging on shows, I love working on projects to develop myself. Currently, I am helping develop next-gen devices with the graduate students in the Functional Nanomaterials research group at Waterloo. The student teams that I'm involved with have given me an opportunity to develop technical and team skills, through collaborating with teammates to work on tasks everyday. Throughout my 5 years at Waterloo and beyond, I hope to learn as much as I can and work on using nanotechnology to introduce innovative technology into the world.</p>
+            <p class="w-90 sm-w-100 m-25px-b"> I'm a first year Nanotechnology Engineering student at the University of Waterloo, and I'm excited to be at the forefront of the technological revolution that is Nanotechnology. <br><br>Throughout my 5 years at Waterloo and beyond, I hope to learn as much as I can and work on introducing innovative technology into the world.</p>
             <a href="static/Resume%20-%20Raj%20Zala.pdf" class="m-btn" target="_blank">download resume</a>
           </div>
           <div class="col-12 col-md-6 sm-m-30px-t">
@@ -146,6 +146,27 @@
           </ul>
         </div> <!-- Portfolio Filter -->
 
+        <li class="portfolio-item illustration">
+              <div class="portfolio-col portfolio-hover-02">
+                <a href="#">
+                  <img src="static/img/biomechlogo.jpg" title="" alt="">
+                </a>
+                <div class="overlay dark-bg border-all border-w-10 border-double border-white"></div>
+                <div class="hover text-center p-10px">
+                  <div class="hover-middle">
+                    <p class="font-w-600 text-uppercase font-15 color-white font-alt m-0px letter-spacing-2">Process Engineer</p>
+                    <label class="color-white">OTI Lumionics</label>
+                    <div class="btn-bar">
+                      <a target="_blank"href="https://www.otilumionics.com/" class="theme-color">
+                        <i class="fa fa-link"></i>
+                      </a>
+                    </div> <!-- Video Btn -->
+                  </div> <!-- .hover-middle -->
+                </div> <!-- Hover -->
+              </div> <!-- Portfolio -->
+            </li> <!-- col -->
+        
+        
         <div class="portfolio-content">
           <ul class="portfolio-cols portfolio-cols-3">
             <li class="portfolio-item illustration">
@@ -160,26 +181,6 @@
                     <label class="color-white">Waterlo Airlock Team</label>
                     <div class="btn-bar">
                       <a target="_blank"href="https://watlock.co/index.html" class="theme-color">
-                        <i class="fa fa-link"></i>
-                      </a>
-                    </div> <!-- Video Btn -->
-                  </div> <!-- .hover-middle -->
-                </div> <!-- Hover -->
-              </div> <!-- Portfolio -->
-            </li> <!-- col -->
-
-            <li class="portfolio-item illustration">
-              <div class="portfolio-col portfolio-hover-02">
-                <a href="#">
-                  <img src="static/img/biomechlogo.jpg" title="" alt="">
-                </a>
-                <div class="overlay dark-bg border-all border-w-10 border-double border-white"></div>
-                <div class="hover text-center p-10px">
-                  <div class="hover-middle">
-                    <p class="font-w-600 text-uppercase font-15 color-white font-alt m-0px letter-spacing-2">Mechanical and Software Team</p>
-                    <label class="color-white">BioMechatronics Team</label>
-                    <div class="btn-bar">
-                      <a target="_blank"href="https://www.youtube.com/watch?v=9RRD68_OUdc&feature=youtu.be" class="theme-color">
                         <i class="fa fa-link"></i>
                       </a>
                     </div> <!-- Video Btn -->
