--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <li class="portfolio-item illustration">
               <div class="portfolio-col portfolio-hover-02">
                 <a href="#">
-                  <img src="static/img/biomechlogo.jpg" title="" alt="">
+                  <img src="static/img/oti-icon.png" title="" alt="">
                 </a>
                 <div class="overlay dark-bg border-all border-w-10 border-double border-white"></div>
                 <div class="hover text-center p-10px">
