--- a/index.html
+++ b/index.html
@@ -203,6 +203,9 @@
                       <a class="lightbox-gallery theme-color" href="static/img/lab.png" title="During the process of etching FTO with HCl. Substrates with FTO films were currently in the sonicator (left). ">
                         <i class="fas fa-expand"></i>
                       </a>
+                      <a target="_blank"href="https://uwaterloo.ca/nano-micro-systems-lab/" class="theme-color">
+                        <i class="fa fa-link"></i>
+                      </a>
                       <a target="_blank"href="https://sites.google.com/site/uwaterloonanomaterials/" class="theme-color">
                         <i class="fa fa-link"></i>
                       </a>
