--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <span class="w-50px h-1px theme-bg display-table"></span>
             <p class="w-90 sm-w-100 font-alt font-w-600 color-extra-dark-gray m-25px-t">Innovator in training.</p>
             <p class="w-90 sm-w-100 m-25px-b"> I'm a second year Nanotechnology Engineering student at the University of Waterloo, and I'm excited to be at the forefront of the technological revolution that is Nanotechnology. <br><br>Throughout my 5 years at Waterloo and beyond, I hope to learn as much as I can and work on introducing innovative technology into the world.</p>
-            <a href="static/Resume - Raj Zala.pdf" class="m-btn" target="_blank">download resume</a>
+            <a href="static/Resume%20-%20Raj%20Zala.pdf" class="m-btn" target="_blank">download resume</a>
           </div>
           <div class="col-12 col-md-6 sm-m-30px-t">
             <img src="static/img/road.jpg" title="" alt="" />
