--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
       <div class="container z-index1 position-relative-m">
         <div class="row no-gutters justify-content-center align-items-center full-screen p-100px-tb sm-p-80px-t sm-p-0px-b">
           <div class="col-md-12 m-50px-t sm-m-30px-t sm-m-60px-b text-center">
-              <h1 class="font-alt color-white font-w-700 m-0px">Hi! I'm Raj.</h1>
-              <p class="color-white font-22 md-font-16 sm-font-12 p-10px-tb m-0px">An Aspiring<span class="font-w-700" id="type-it"></span></p>
+              <p class="color-white font-22 md-font-16 sm-font-12 p-10px-tb m-0px">Hi!<span class="font-w-700"></span></p>
+              <h1 class="font-alt color-white font-w-400 m-0px">I'm <span class="font-w-500" id="type-it"></span></h1>
           </div>
         </div> <!-- row -->
       </div><!-- container -->
