--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <p class="color-medium-gray text-uppercase letter-spacing-2 font-w-400 m-0px m-5px-b">What I've Worked On:</p>
             <h4 class="color-extra-dark-gray font-w-700 font-alt text-uppercase font-alt m-0px m-10px-b">PortFolio</h4>
             <span class="w-50px h-1px theme-bg display-table m-auto"></span>
-            <p class="font-altm m-0px m-25px-t">As an engineer, I am constantly looking for opportunities to improve my skills and build experiences to grow. Here's an overview of the projects I've worked on and love to work on everyday outside of class!</p>
+            <p class="font-altm m-0px m-25px-t">As an engineer, I am constantly looking for opportunities to improve my skills and learn new things. Here's an overview of the projects I've worked on, and love to work on everyday outside of class!</p>
           </div>
         </div> <!-- row -->
 
