--- a/index.html
+++ b/index.html
@@ -188,6 +188,26 @@
               </div> <!-- Portfolio -->
             </li> <!-- col -->
             
+            <li class="portfolio-item photoshop">
+              <div class="portfolio-col portfolio-hover-02">
+                <a href="#">
+                  <img src="static/img/fgl.PNG" title="" alt="">
+                </a>
+                <div class="overlay dark-bg border-all border-w-10 border-double border-white"></div>
+                <div class="hover text-center p-10px">
+                  <div class="hover-middle">
+                    <p class="font-w-600 text-uppercase font-15 color-white font-alt m-0px letter-spacing-2">Nanomedicine Researcher</p>
+                    <label class="color-white">Frank Gu Lab - University of Toronto</label>
+                    <div class="btn-bar">
+                      <a target="_blank"href="https://www.frankgulab.com/" class="theme-color">
+                        <i class="fa fa-link"></i>
+                      </a>
+                    </div> <!-- Video Btn -->
+                  </div> <!-- .hover-middle -->
+                </div> <!-- Hover -->
+              </div> <!-- Portfolio -->
+            </li> <!-- col -->
+
             
             <li class="portfolio-item photoshop">
               <div class="portfolio-col portfolio-hover-02">
