--- a/index.html
+++ b/index.html
@@ -151,15 +151,15 @@
             <li class="portfolio-item illustration">
               <div class="portfolio-col portfolio-hover-02">
                 <a href="#">
-                  <img src="static/img/watlocklogo.png" title="" alt="">
+                  <img src="static/img/uwnrg.jpg" title="" alt="">
                 </a>
                 <div class="overlay dark-bg border-all border-w-10 border-double border-white"></div>
                 <div class="hover text-center p-10px">
                   <div class="hover-middle">
-                    <p class="font-w-600 text-uppercase font-15 color-white font-alt m-0px letter-spacing-2">Mechanical Project Lead</p>
-                    <label class="color-white">Waterloo Airlock Team</label>
+                    <p class="font-w-600 text-uppercase font-15 color-white font-alt m-0px letter-spacing-2">Materials - Team Lead</p>
+                    <label class="color-white">Waterloo NanoRobotics Group</label>
                     <div class="btn-bar">
-                      <a target="_blank"href="https://watlock.co/index.html" class="theme-color">
+                      <a target="_blank"href="https://uwnrg.org/" class="theme-color">
                         <i class="fa fa-link"></i>
                       </a>
                     </div> <!-- Video Btn -->
