--- a/index.html
+++ b/index.html
@@ -392,6 +392,7 @@
               <ul class="social-icons-01 social-icons-small">
                   <li><a class="facebook" target="_blank" href="https://www.facebook.com/RajZ4la"><i class="fab fa-facebook-f"></i></a></li>
                   <li><a class="linkedin" target="_blank"href="https://www.linkedin.com/in/raj-zala/"><i class="fab fa-linkedin-in"></i></a></li>
+                  <li><a class="github" target="_blank" href="https://github.com/rajjzzz"><i class="fab fa-github"></i></a></li>
                 </ul>
             </div><!-- col -->
           </div> <!-- row -->
